--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,20 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# OS generated files
+nohup.out
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# PyCharm
+.idea/
+
+# Other
+venv/
+log/
