--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ python:
 install: "pip install requests"
 # command to run tests
 script:
-- python test_darkskypy.py
+- python tests/test_darkskypy.py
