--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: python
 python:
-  - "2.6"
   - "2.7"
   - "3.2"
   - "3.3"
@@ -14,3 +13,4 @@ install: "pip install requests"
 # command to run tests
 script:
 - python tests/test_darkskypy.py
+- python tests/test_weather.py
